--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   </style>
 </head>
 <body>
-<div class="container background">
+  <div class="background">
+    <img class="bgg" src="bg-header-desktop.png">
+    </div>
+<div class="container">
   <img class="logo" src="images/logo.svg" alt="logo">
   <h1>A history of everything you copy</h1>
 
