--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div class="background">
-    <img class="bgg" src="bg-header-desktop.png">
+    <img class="bgg" src="images/bg-header-desktop.png">
     </div>
 <div class="container">
   <img class="logo" src="images/logo.svg" alt="logo">
@@ -111,7 +111,7 @@
 </div>
 
 <div class="container footer-flex">
-  <div class="logo-container"><img src="images/logo.svg" alt="logo"></div>
+  <div class="logo-container"><img src="/images/logo.svg" alt="logo"></div>
   <div class="links">
     <a href="#">FAQs</a>
     <a href="#">Contact Us</a>
